# MevEthRouter

./: .env.example  .gitignore  README.md  foundry.toml  pyproject.toml  shell.nix  slither.config.json
.github/workflows/: forge.yaml  slither.yaml
broadcast/Deploy.s.sol/1/: run-latest.json
docs/: book.toml  virtual-reserves.md
docs/src/: README.md  SUMMARY.md
docs/src/src/: README.md
docs/src/src/MevEthRouter.sol/: contract.MevEthRouter.md
docs/src/src/interfaces/: README.md
docs/src/src/interfaces/ICurveV2Pool.sol/: interface.ICurveV2Pool.md
docs/src/src/interfaces/IERC20.sol/: interface.IERC20.md
docs/src/src/interfaces/IGyro.sol/: interface.IGyro.md
docs/src/src/interfaces/IGyroECLPMath.sol/: interface.IGyroECLPMath.md
docs/src/src/interfaces/IMevEth.sol/: interface.IMevEth.md
docs/src/src/interfaces/IMevEthRouter.sol/: interface.IMevEthRouter.md
docs/src/src/interfaces/IQuoterV2.sol/: interface.IQuoterV2.md
docs/src/src/interfaces/IRateProvider.sol/: interface.IRateProvider.md
docs/src/src/interfaces/IUniswapV2Factory.sol/: interface.IUniswapV2Factory.md
docs/src/src/libraries/: README.md
script/: Deploy.s.sol  deploy-eth.sh
src/: MevEthRouter.sol
src/interfaces/: ICurveV2Pool.sol  IGyro.sol  IGyroECLPMath.sol  IMevEth.sol  IMevEthRouter.sol  IQuoterV2.sol  IRateProvider.sol  IUniswapV2Factory.sol  IUniswapV2Pair.sol  IUniswapV2Router.sol  IUniswapV3Factory.sol  IUniswapV3Pool.sol  IUniswapV3SwapCallback.sol  IVault.sol  IWETH.sol
src/libraries/: Babylonian.sol  MevEthLibrary.sol
test/: MevEthRouter.t.sol  MevEthRouter2.t.sol
(+7 files in other folders)
