[tool.poetry]
name = "MevEthRouter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "MevEthRouter"}]

[tool.poetry.dependencies]
python = "^3.11"
slither-analyzer = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"